# Pose

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: arxiv_v2.md  evidence_note_00000006.md
src/pose/: __init__.py  omega_integration.py  pose_pqc.py
tests/: test_omega_integration.py  test_pose_pqc.py
